include $(top_srcdir)/PreRules.am

basedir = $(localstatedir)/lib/fuppes
dist_base_DATA = \
	fuppes.cfg

devicesdir = $(localstatedir)/lib/fuppes/devices
dist_devices_DATA = \
	devices/default.cfg \
	devices/default-transcoding-enabled.cfg \
  devices/xbox.cfg \
  devices/ps3.cfg

vfoldersdir = $(localstatedir)/lib/fuppes/vfolders
dist_vfolders_DATA = \
	vfolders/default.cfg \
  vfolders/xbox.cfg
